src/css/ha-bottom-sheet.css
/* Background color, border radius, and height */
:host {
	--ha-bottom-sheet-surface-background: var(
		--md-sys-color-surface-container-low
	);
	--ha-bottom-sheet-border-radius: var(--md-sys-shape-corner-extra-large);
	--ha-bottom-sheet-height: calc(
		100dvh - max(var(--safe-area-inset-top), 72px)
	);
}

/* Elevation */
wa-drawer::part(dialog) {
	box-shadow: var(--md-sys-elevation-level1);
}

/* Handle */
.handle {
	height: 26px;
}
.handle::after {
	width: 32px;
}
wa-drawer::part(body) {
	padding-top: 8px;
	overflow: visible;
}

/* Animation buffer area  */
wa-drawer::part(dialog) {
	overflow: visible;
}
wa-drawer::part(body)::after {
	content: '';
	position: relative;
	bottom: -128px;
	width: 100%;
	height: 128px;
	background-color: var(--ha-bottom-sheet-surface-background);
}

